--- a/workspace/Parameters/res/layout/manage_location.xml
+++ b/workspace/Parameters/res/layout/manage_location.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
     <LinearLayout
+        android:id="@+id/linearLayout1"
         android:layout_width="fill_parent"
-        android:layout_height="52dp" >
+        android:layout_height="52dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/location_heading_textView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="0.52"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="10dp"
-            android:layout_weight="0.52"
             android:text="Existing Ponds"
             android:textSize="30sp" />
 
@@ -24,31 +28,43 @@
             android:layout_height="match_parent"
             android:layout_gravity="right"
             android:layout_weight="0.1"
-            android:background="#FFFFFF"
+            android:background="@null"
             android:onClick="onAddLocation"
             android:src="@drawable/plus_button_blue" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="fill_parent"
+        android:layout_above="@+id/linearLayout2"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/linearLayout1"
+        android:orientation="vertical" >
 
         <ListView
             android:id="@+id/locations_list"
-            android:layout_width="fill_parent"
-            android:layout_height="364dp"
-            android:gravity="center"
-            android:numColumns="auto_fit" >
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
         </ListView>
     </LinearLayout>
 
-    <Button
-        android:id="@+id/location_done"
-        android:layout_width="150dp"
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="120dp"
-        android:background="@drawable/custom_button_transparent"
-        android:onClick="onDone"
-        android:text="@+string/done" />
+        android:gravity="center_horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true" >
 
-</LinearLayout>
+        <Button
+            android:id="@+id/location_done"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="18dp"
+            android:background="@drawable/custom_button_transparent"
+            android:onClick="onDone"
+            android:text="@+string/done"
+            android:width="150dp" />
+    </LinearLayout>
+
+</RelativeLayout>
