--- a/workspace/Parameters/res/layout/manage_location_list_element.xml
+++ b/workspace/Parameters/res/layout/manage_location_list_element.xml
@@ -2,28 +2,35 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" 
-    >
+    android:orientation="horizontal" >
 
-   
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="14dp"
+        android:layout_toRightOf="@+id/location_checkBox" >
+
+        <TextView
+            android:id="@+id/location_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="35dp"
+            android:layout_marginTop="10dp"
+            android:height="30dp"
+            android:text="asdfds"
+            android:textSize="23sp" />
+    </LinearLayout>
 
     <CheckBox
         android:id="@+id/location_checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/location_textView"
-        android:layout_alignParentLeft="true"
-        />
-
-    <TextView
-        android:id="@+id/location_textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:height="30dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="35dp"
         android:layout_marginTop="10dp"
-        android:layout_toRightOf="@+id/location_checkBox"
-        android:text="asdfds" />
+        android:layout_marginLeft="5dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
