--- a/workspace/Parameters/res/layout/manage_parameter_list_element.xml
+++ b/workspace/Parameters/res/layout/manage_parameter_list_element.xml
@@ -17,6 +17,7 @@
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="23sp"
             android:text="TextView" />
 
         <TextView
@@ -25,6 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
              android:layout_marginBottom="10dp"
+             android:textSize="18sp"
             android:text="TextView" />
     </LinearLayout>
 
@@ -32,9 +34,12 @@
         android:id="@+id/parameter_radioButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/linearLayout1"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="16dp"
-        android:onClick="onClickRadioButton" />
+        android:layout_marginBottom="23dp"
+        android:layout_marginLeft="5dp"
+        android:onClick="onClickRadioButton"
+        />
+        <!-- android:onClick="onClickRadioButton"  --> 
 
 </RelativeLayout>
