--- a/workspace/Parameters/res/layout/reports_activity.xml
+++ b/workspace/Parameters/res/layout/reports_activity.xml
@@ -1,39 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" 
-    android:background="@drawable/water1">
+    android:layout_height="match_parent"
+    android:background="@drawable/water1" >
 
-    <Button
-        android:id="@+id/location_save"
-        android:layout_width="150dp"
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="72dp"
-        android:onClick="onSelectParameter"
-        android:background="@drawable/custom_button_transparent"
-        android:text="@+string/select_parameter" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="60dp"
+        android:gravity="center_horizontal" >
+
+        <TextView
+            android:id="@+id/location_done"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/custom_background_bluebox3"
+            android:onClick="onSelectParameter"
+            android:clickable="true"
+             android:layout_marginLeft="50dp"
+            android:paddingTop="13dp"
+            android:paddingBottom="13dp"
+            android:paddingLeft="13dp"
+            android:textColor="#F2F2F2"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:text="@+string/select_parameter"
+            android:width="120dp" />
+
+        <ImageView
+            android:id="@+id/tick_parameter_imageView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+           android:layout_marginTop="15dp"
+            android:layout_marginLeft="20dp"
+             android:src="@drawable/tick_mark_black" />
+    </LinearLayout>
 
     <Button
-        android:id="@+id/location_cancel"
+        android:id="@+id/button3"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/location_save"
-        android:layout_alignRight="@+id/location_save"
-        android:layout_below="@+id/location_save"
-        android:layout_marginTop="45dp"
-        android:onClick="onSelectPond"
+        android:height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="66dp"
         android:background="@drawable/custom_button_transparent"
-        android:text="@+string/select_pond" />
+        android:onClick="onGenerateReports"
+        android:text="@+string/generate_report" />
+  
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/linearLayout1"
+        android:layout_marginTop="54dp"
+        android:gravity="center_horizontal" >
+
+        <TextView
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:background="@drawable/custom_background_bluebox3"
+            android:onClick="onSelectPond"
+            android:clickable="true"
+           android:paddingTop="13dp"
+            android:paddingBottom="13dp"
+            android:paddingLeft="13dp"
+             android:textColor="#F2F2F2"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:text="@+string/select_location"
+            android:width="120dp" />
+
+        <ImageView
+            android:id="@+id/tick_parameter_imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="15dp"
+            android:src="@drawable/tick_mark_black" />
+    </LinearLayout>
 
     <RadioGroup
         android:id="@+id/radio_group_duration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/button3"
+        android:layout_below="@+id/linearLayout2"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginBottom="70dp"
+        android:layout_marginTop="42dp"
         android:orientation="horizontal" >
 
         <RadioButton
@@ -50,16 +112,5 @@
             android:layout_height="wrap_content"
             android:text="@+string/monthly_report" />
     </RadioGroup>
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/location_cancel"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="66dp"
-        android:background="@drawable/custom_button_transparent"
-        android:onClick="onGenerateReports"
-        android:text="@+string/generate_report" />
 
 </RelativeLayout>
