--- a/workspace/Parameters/res/drawable-hdpi/custom_background_bluebox.xml
+++ b/workspace/Parameters/res/drawable-hdpi/custom_background_bluebox.xml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android" >
+
     <solid android:color="@android:color/transparent" />
+
     <stroke
         android:width="1dp"
-        android:color="#87CEFA" />
+        android:color="#87CEFA" />			<!-- light blue -->
+
+    <corners
+        android:bottomLeftRadius="8dp"
+        android:bottomRightRadius="8dp"
+        android:topLeftRadius="8dp"
+        android:topRightRadius="8dp" />
+
 </shape>
