--- a/workspace/Parameters/res/layout/add_location.xml
+++ b/workspace/Parameters/res/layout/add_location.xml
@@ -159,8 +159,8 @@
         android:id="@+id/linearLayoutButtons"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/linearLayout2"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
         android:layout_marginBottom="38dp"
         android:gravity="center_horizontal"
         android:orientation="horizontal"
@@ -170,7 +170,7 @@
             android:id="@+id/location_save"
             android:layout_width="110dp"
             android:layout_height="wrap_content"
-            android:layout_marginRight="30dp"
+            android:layout_marginRight="40dp"
             android:background="@drawable/custom_button"
             android:onClick="onSave"
             android:text="@+string/save" />
