--- a/workspace/Parameters/res/layout/activity_add.xml
+++ b/workspace/Parameters/res/layout/activity_add.xml
@@ -10,7 +10,7 @@
                   android:orientation="horizontal"
                   android:layout_width="fill_parent" 
                   android:layout_height="50dp" 
-                  android:background="#00BFFF"
+                  android:background="#163C7A"
                   >
         <TextView 
              android:text="AquaTrac"
@@ -20,19 +20,20 @@
              android:layout_height="wrap_content"
              android:fastScrollEnabled="true"
              android:layout_gravity="center_horizontal"
-             android:layout_marginLeft="100dp"
-             android:layout_marginTop="5dp"
+             android:layout_marginLeft="120dp"
+             android:layout_marginTop="7dp"
             />
     </LinearLayout>
     <TextView  android:text="Ponds"
                android:textSize="22dp"
-               android:textColor="#00BFFF"
+               android:textColor="#163C7A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
-               android:layout_marginLeft="10dp"
+               android:layout_marginLeft="20dp"
+               android:layout_marginTop="10dp"
         />
    
-     <GridView  
+    <!-- <GridView  
                android:id="@+id/gridview_ponds"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
@@ -44,6 +45,19 @@
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                android:gravity="center"/>
- 
+  --> 
+  <GridView  
+               android:id="@+id/gridview_ponds"
+               android:layout_width="fill_parent"
+               android:layout_height="fill_parent"
+               android:columnWidth="180dp"
+               android:numColumns="auto_fit"
+               android:verticalSpacing="15dp"
+               android:horizontalSpacing="3dp"
+               android:stretchMode="none"
+               android:layout_marginTop="10dp"
+               android:layout_marginLeft="10dp"
+               android:gravity="center"/>
+  
 
 </LinearLayout>
