--- a/workspace/Parameters/res/layout/activity_add_parameter_value.xml
+++ b/workspace/Parameters/res/layout/activity_add_parameter_value.xml
@@ -18,38 +18,68 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="25dp"
+        android:layout_marginLeft="50dp"
         android:textSize="20dp"
-        android:textColor="#00BFFF"
+        android:textColor="#1E90FF"
+        />
+   <LinearLayout 
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:orientation="horizontal" >
+    <TextView 
+        android:text="Current value: "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="100dp"
+        android:textSize="15dp"
         />
      <TextView android:id="@+id/slider_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
-       android:layout_marginLeft="275dp"
-       android:layout_marginTop="200dp"
+       android:layout_marginTop="100dp"
+       android:textSize="15dp"
        /> 
-   
+   </LinearLayout>
     <SeekBar android:id="@+id/seekbar"
 android:layout_width="300dp"
 android:layout_height="wrap_content"
 android:max="100"
 android:progress="1"
 android:layout_gravity="center_horizontal"
-android:layout_marginTop="10dp"
+android:layout_marginTop="50dp"
 android:minWidth="250px"  />
+ <LinearLayout
+     android:layout_width="fill_parent"
+     android:layout_height="wrap_content"
+     android:orientation="horizontal"
+      >   
+ <TextView android:id="@+id/min_value"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginLeft="50dp"
+           android:layout_marginTop="10dp"
+           android:text=""
+          />   
+          
+ <TextView android:id="@+id/max_value"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginLeft="253dp"
+           android:layout_marginTop="10dp"
+           android:text=""
+      />
     
-    
-    
-   
+  </LinearLayout> 
 
 <Button android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Save"
         android:textColor="#ffffff"
-        android:background="#1E90FF" 
+        android:background="@drawable/rounded" 
         android:textSize="20dp"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="240dp"
+        android:layout_marginLeft="300dp"
         android:layout_marginRight="20dp"
         android:onClick="submit"
     />
