internet & common dialogs

--- a/workspace/Parameters/res/layout/reports_activity.xml
+++ b/workspace/Parameters/res/layout/reports_activity.xml
@@ -22,13 +22,13 @@
             android:background="@drawable/custom_background_bluebox3"
             android:onClick="onSelectParameter"
             android:clickable="true"
-             android:layout_marginLeft="50dp"
             android:paddingTop="13dp"
             android:paddingBottom="13dp"
-            android:paddingLeft="13dp"
+            android:layout_marginLeft="47dp"
             android:textColor="#F2F2F2"
             android:textSize="20sp"
             android:textStyle="bold"
+            android:gravity="center_horizontal"
             android:text="@+string/select_parameter"
             android:width="120dp" />
 
@@ -66,16 +66,16 @@
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="50dp"
+            android:layout_marginLeft="47dp"
             android:background="@drawable/custom_background_bluebox3"
             android:onClick="onSelectPond"
             android:clickable="true"
            android:paddingTop="13dp"
             android:paddingBottom="13dp"
-            android:paddingLeft="13dp"
              android:textColor="#F2F2F2"
             android:textSize="20sp"
             android:textStyle="bold"
+            android:gravity="center_horizontal"
             android:text="@+string/select_location"
             android:width="120dp" />
 
