--- a/workspace/Parameters/res/layout/activity_settings.xml
+++ b/workspace/Parameters/res/layout/activity_settings.xml
@@ -16,13 +16,13 @@
         android:layout_marginTop="143dp" >
 
         <TextView
-            android:id="@+id/location_heading_textView"
+            android:id="@+id/manage_location_textView"
             android:layout_width="120dp"
             android:layout_height="match_parent"
             android:layout_marginRight="30dp"
             android:paddingTop="18dp"
             android:paddingBottom="18dp"
-            android:paddingLeft="13dp"
+            android:gravity="center_horizontal"
             android:textColor="#F2F2F2"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -33,13 +33,13 @@
             />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/manage_parameter_textView"
             android:layout_width="120dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="30dp"
             android:paddingTop="18dp"
             android:paddingBottom="18dp"
-            android:paddingLeft="7dp"
+            android:gravity="center_horizontal"
             android:textColor="#F2F2F2"
             android:textSize="20sp"
             android:textStyle="bold"
