--- a/workspace/Parameters/res/layout/edit_parameter.xml
+++ b/workspace/Parameters/res/layout/edit_parameter.xml
@@ -47,8 +47,8 @@
             android:width="100dp" />
          <ImageButton
                 android:id="@+id/clear_start_critic_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="5dp"
                 android:layout_alignParentRight="true"
@@ -95,8 +95,8 @@
 
             <ImageButton
                 android:id="@+id/clear_end_critic_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginTop="5dp"
@@ -113,7 +113,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dip"
-        android:layout_marginTop="250dp"
+        android:layout_marginTop="300dp"
         android:layout_weight="0.1"
         android:gravity="center_horizontal"
         android:orientation="horizontal" >
