--- a/workspace/Parameters/res/layout/edit_parameter.xml
+++ b/workspace/Parameters/res/layout/edit_parameter.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:background="#6666FF"
         android:paddingLeft="10dp"
-        android:text="dsa"
+        android:text="ParaName"
         android:textColor="#FFFFFF"
         android:textSize="32sp"
         android:textStyle="bold" />
